force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/agf__ADM_Change_List__c.object-meta.xml
<CustomObject>
    <description>Perforce change lists for checking in code changes.  Related to bugs and user stories.</description>
    <label>Change List</label>
    <nameField>
        <displayFormat>PF-{0000000}</displayFormat>
        <label>Changelist ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>