force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Changelist__c.field-meta.xml
<CustomField>
    <fullName>agf__Changelist__c</fullName>
    <description>Link back to the changelist description</description>
    <formula>IF(ISPICKVAL(agf__Source__c, &apos;Perforce&apos;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; agf__Perforce_Changelist__c, agf__Perforce_Changelist__c), 



IF(ISPICKVAL(agf__Source__c, &apos;&apos;), 



HYPERLINK( &quot;https://build.soma.salesforce.com/build/Perforce/describe?change=&quot; &amp; agf__Perforce_Changelist__c, agf__Perforce_Changelist__c), 



IF(ISPICKVAL(agf__Source__c, &apos;GitHub&apos;),  HYPERLINK( &quot;https://github.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;github.com/&quot; &amp; agf__Perforce_Changelist__c),


IF(ISPICKVAL(agf__Source__c, &apos;Stash&apos;),  

HYPERLINK( &quot;https://stash.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;stash.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c),


HYPERLINK(&quot;https://git.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c, &quot;git.soma.salesforce.com/&quot; &amp; agf__Perforce_Changelist__c)

)


)



)



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Changelist Link</label>
    <type>Text</type>
</CustomField>