force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Check_In_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Check_In_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check-in By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZvMAI</relationshipName>
    <type>Lookup</type>
</CustomField>