force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Check_In_Date__c</fullName>
    <label>Check-in Date</label>
    <type>DateTime</type>
</CustomField>