force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__External_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>An external ID used for syncing between instances.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>