force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Local_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Local_Check_in_Date__c</fullName>
    <label>Local Check-in Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>