force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Perforce_Changelist__c.field-meta.xml
<CustomField>
    <fullName>agf__Perforce_Changelist__c</fullName>
    <description>Reference to Perforce Changelist number</description>
    <label>Changelist #</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>