force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Release_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Name__c</fullName>
    <label>Release Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>