force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Source__c.field-meta.xml
<CustomField>
    <fullName>agf__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perforce</fullName>
                <default>true</default>
                <label>Perforce</label>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Internal Git</fullName>
            </value>
            <value>
                <fullName>Stash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>