force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Task__c.field-meta.xml
<CustomField>
    <fullName>agf__Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Change Lists</relationshipLabel>
    <relationshipName>Change_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>