force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Change_List__c/fields/agf__Work_Number__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_Number__c</fullName>
    <formula>VALUE(RIGHT(agf__Work__r.Name, 6))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>